--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ charset-normalizer==2.0.4
 click==8.1.3
 cryptography==37.0.1
 cycler==0.11.0
-daal4py==2021.5.0
+daal4py
 debugpy==1.5.1
 decorator==5.1.1
 defusedxml==0.7.1
