--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ MarkupSafe==2.1.1
 matplotlib==3.5.1
 matplotlib-inline==0.1.2
 mistune==0.8.4
-mkl-fft==1.3.1
+mkl-fft
 mkl-random==1.2.2
 mkl-service==2.4.0
 munkres==1.1.4
