--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ kiwisolver==1.4.2
 MarkupSafe==2.1.1
 matplotlib==3.5.1
 matplotlib-inline==0.1.2
-mistune==0.8.4
+mistune
 mkl-fft
 mkl-random==1.2.2
 mkl-service==2.4.0
