--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ beautifulsoup4==4.11.1
 bleach==4.1.0
 Bottleneck==1.3.5
 brotlipy==0.7.0
-certifi==2022.6.15
+certifi==2021.10.8
 cffi==1.15.1
 charset-normalizer==2.0.4
 click==8.1.3
@@ -49,7 +49,7 @@ kiwisolver==1.4.2
 MarkupSafe==2.1.1
 matplotlib==3.5.1
 matplotlib-inline==0.1.2
-mistune
+mistune==0.8.4
 mkl-fft==1.3.1
 mkl-random==1.2.2
 mkl-service==2.4.0
