--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,15 @@ certifi==2021.10.8
 cffi==1.15.1
 charset-normalizer==2.0.4
 click==8.1.3
+common-cmplr-lib-rt==2021.2.0
+common-cmplr-lic-rt==2021.2.0
 cryptography==37.0.1
 cycler==0.11.0
-daal4py
+daal4py==2021.5.0
 debugpy==1.5.1
 decorator==5.1.1
 defusedxml==0.7.1
+dpcpp-cpp-rt==2021.2.0
 entrypoints==0.4
 fastjsonschema==2.15.1
 Flask==2.2.2
@@ -25,6 +28,7 @@ fonttools==4.25.0
 idna==3.3
 importlib-metadata==4.11.3
 importlib-resources==5.2.0
+intel-openmp==2021.4.0
 ipykernel==6.9.1
 ipython==7.31.1
 ipython-genutils==0.2.0
@@ -62,6 +66,7 @@ nest-asyncio==1.5.5
 notebook==6.4.12
 numexpr==2.8.3
 numpy==1.21.5
+opencl-rt==2021.2.0
 packaging==21.3
 pandas==1.3.5
 pandocfilters==1.5.0
@@ -97,6 +102,7 @@ sip==6.6.2
 six==1.16.0
 sniffio==1.2.0
 soupsieve==2.3.1
+tbb==2021.6.0
 terminado==0.13.1
 testpath==0.6.0
 threadpoolctl==2.2.0
