--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ common-cmplr-lib-rt==2021.2.0
 common-cmplr-lic-rt==2021.2.0
 cryptography==37.0.1
 cycler==0.11.0
-daal4py==2021.5.0
+daal4py
 debugpy==1.5.1
 decorator==5.1.1
 defusedxml==0.7.1
