--- a/requirements.txt
+++ b/requirements.txt
@@ -1,120 +1,88 @@
-anyio==3.5.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
+argon2-cffi==20.1.0
+async-generator==1.10
 attrs==21.4.0
-Babel==2.9.1
 backcall==0.2.0
-beautifulsoup4==4.11.1
 bleach==4.1.0
-Bottleneck==1.3.5
 brotlipy==0.7.0
-certifi==2021.10.8
-cffi==1.15.1
+certifi==2021.5.30
+cffi==1.14.6
 charset-normalizer==2.0.4
-click==8.1.3
-common-cmplr-lib-rt==2021.2.0
-common-cmplr-lic-rt==2021.2.0
-cryptography==37.0.1
+click==8.0.3
+cryptography==35.0.0
 cycler==0.11.0
-daal4py
-debugpy==1.5.1
+dataclasses==0.8
 decorator==5.1.1
 defusedxml==0.7.1
-dpcpp-cpp-rt==2021.2.0
-entrypoints==0.4
-fastjsonschema==2.15.1
-Flask==2.2.2
-fonttools==4.25.0
+entrypoints==0.3
+Flask==2.0.3
 idna==3.3
-importlib-metadata==4.11.3
-importlib-resources==5.2.0
-intel-openmp==2021.4.0
-ipykernel==6.9.1
-ipython==7.31.1
+ipykernel==5.3.4
+ipython==7.16.1
 ipython-genutils==0.2.0
 ipywidgets==7.6.5
-itsdangerous==2.1.2
-jedi==0.18.1
+itsdangerous==2.0.1
+jedi==0.17.0
 Jinja2==3.0.3
-joblib==1.1.0
-json5==0.9.6
+joblib==1.0.1
 jsonify==0.5
-jsonschema==4.4.0
+jsonschema==3.0.2
 jupyter==1.0.0
-jupyter-client==7.2.2
+jupyter-client==7.1.2
 jupyter-console==6.4.3
-jupyter-core==4.10.0
-jupyter-server==1.18.1
-jupyterlab==3.4.4
+jupyter-core==4.8.1
 jupyterlab-pygments==0.1.2
-jupyterlab-server==2.12.0
 jupyterlab-widgets==1.0.0
-kiwisolver==1.4.2
-MarkupSafe==2.1.1
-matplotlib==3.5.1
-matplotlib-inline==0.1.2
+kiwisolver==1.3.1
+MarkupSafe==2.0.1
+matplotlib==3.3.4
 mistune==0.8.4
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
-munkres==1.1.4
-nbclassic==0.3.5
-nbclient==0.5.13
-nbconvert==6.4.4
-nbformat==5.3.0
-nest-asyncio==1.5.5
-notebook==6.4.12
-numexpr==2.8.3
-numpy==1.21.5
-opencl-rt==2021.2.0
+mkl-fft==1.3.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.3
+numpy==1.19.2
+olefile==0.46
 packaging==21.3
-pandas==1.3.5
+pandas==1.1.5
 pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.2.0
-pip==22.1.2
-ply==3.11
-prometheus-client==0.14.1
+Pillow==8.3.1
+pip==21.2.2
+prometheus-client==0.13.1
 prompt-toolkit==3.0.20
 ptyprocess==0.7.0
 pycparser==2.21
 Pygments==2.11.2
 pyOpenSSL==22.0.0
 pyparsing==3.0.4
-PyQt5-sip==12.11.0
-pyrsistent==0.18.0
+pyrsistent==0.17.3
 PySocks==1.7.1
 python-dateutil==2.8.2
-pytz==2022.1
-pyzmq==23.2.0
-qtconsole==5.3.1
+pytz==2021.3
+pyzmq==22.2.1
+qtconsole==5.2.2
 QtPy==2.0.1
-requests==2.28.1
-scikit-learn==1.0.2
-scikit-learn-intelex==2021.20220215.162512
-scipy==1.7.3
+requests==2.27.1
+scikit-learn==0.24.2
+scipy==1.5.2
 seaborn==0.11.2
 Send2Trash==1.8.0
-setuptools==61.2.0
-sip==6.6.2
+setuptools==58.0.4
 six==1.16.0
-sniffio==1.2.0
-soupsieve==2.3.1
-tbb==2021.6.0
-terminado==0.13.1
-testpath==0.6.0
+terminado==0.9.4
+testpath==0.5.0
 threadpoolctl==2.2.0
-toml==0.10.2
 tornado==6.1
-traitlets==5.1.1
-typing_extensions==4.3.0
-urllib3==1.26.11
+traitlets==4.3.3
+urllib3==1.26.8
 wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client==0.58.0
-Werkzeug==2.2.2
+Werkzeug==2.0.3
 wheel==0.37.1
-widgetsnbextension==3.5.2
-zipp==3.8.0
+widgetsnbextension==3.5.1
